# example-of-plugins-with-webassembly

./: readme.md
hello-world-plugin/: Cargo.toml  build.sh
hello-world-plugin/src/: lib.rs
host-application/: Cargo.toml  wit
host-application/plugins/: hello-world.wasm
host-application/src/: main.rs  plugin.rs
wit/: plugin.wit
